add more ski calculation